--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "rss-parser": "^3.7.6"
   }
 }
